# Pedestrian-Detection-at-100fps-Very-fast-and-accurate-pedestrian-detector12-.

./: .hgignore  build_all.sh  common_settings.cmake  generate_protocol_buffer_files.sh  license.text  readme.text
data/trained_models/: 2012_04_04_2281_trained_model_octave_0_synthetic_cascade.proto.bin.bootstrap2
data/trained_models/face_detection/: dpm_baseline.mat  readme.text  readme.txt
libs/boost/gil/: color_base.hpp  image_view_factory.hpp  planar_pixel_iterator.hpp
libs/liblinear-1.8/: CMakeLists.txt  linear.cpp
src/applications/: BaseApplication.cpp  BaseApplication.hpp  BaseSdlGui.cpp  BaseSdlGui.hpp
src/applications/boosted_learning/: AdaboostLearner.cpp  AdaboostLearner.hpp  BoostedLearningApplication.cpp  BoostedLearningApplication.hpp  CMakeLists.txt  Feature.cpp  Feature.hpp  ImageData.hpp  LabeledData.cpp  LabeledData.hpp  MemMappedFile.cpp  MemMappedFile.hpp  ModelIO.cpp  ModelIO.hpp  Parameters.cpp  Parameters.hpp  StrongClassifier.cpp  StrongClassifier.hpp  TrainingData.cpp  TrainingData.hpp  TreeNode.cpp  TreeNode.hpp  WeakDiscreteTree.cpp  WeakDiscreteTree.hpp  WeakDiscreteTreeLearner.cpp  WeakDiscreteTreeLearner.hpp  boosted_learning.cpp  eccvw2014_squareschnftrs_inria_training.config.ini  inria_speedy_training_config.ini  integral_channels_helpers.cpp  integral_channels_helpers.hpp  run_speedy_training.sh
src/applications/bootstrapping_lib/: CMakeLists.txt  IntegralChannelsComputer.hpp  bootstrapping_lib.cpp  bootstrapping_lib.hpp  test_bootstrapping_lib.cpp
src/applications/compute_feature_channels/: CMakeLists.txt  ComputeFeatureChannelsApplication.cpp  ComputeFeatureChannelsApplication.hpp
src/applications/dpm_face_detector/: readme.text
src/applications/ground_estimation/: CMakeLists.txt  GroundEstimationApplication.cpp  GroundEstimationApplication.hpp  GroundEstimationGui.cpp  GroundEstimationGui.hpp
src/applications/objects_detection/: CMakeLists.txt  ObjectsDetectionApplication.cpp  ObjectsDetectionApplication.hpp  ObjectsDetectionGui.cpp  ObjectsDetectionGui.hpp  chnftrs_over_bahnhof.config.ini  draw_the_detections.cpp  eccv2014_face_detection_fefdw_HeadHunter.config.ini  eccv2014_face_detection_fefdw_HeadHunter_baseline.config.ini  eccvw2014_square_schnfrts_over_inria.config.ini  eccvw2014_squares_chnftrs_over_caltech.config.ini  eccvw2014_squares_chnftrs_over_kitti.config.ini  inria_pedestrians_cvpr2012.config.ini
src/applications/objects_detection_lib/: CMakeLists.txt  ObjectsDetectionLibGui.cpp  ObjectsDetectionLibGui.hpp  TestObjectsDetectionApplication.cpp  objects_detection_lib.cpp  objects_detection_lib.hpp  test_monocular_objects_detection_lib.config.ini  test_objects_detection_lib.config.ini
src/applications/stixel_world/: CMakeLists.txt  StixelWorldApplication.cpp  StixelWorldApplication.hpp  StixelWorldGui.cpp  draw_stixel_world.cpp  draw_stixel_world.hpp
src/boosted_learning/: Feature.cpp  LabeledData.cpp  ModelIO.cpp  TrainingData.cpp  TrainingData.hpp
src/helpers/: Log.cpp  Log.hpp  add_to_parsed_options.hpp  any_to_string.cpp  get_section_options.cpp  get_section_options.hpp  loggers.cpp  loggers.hpp  progress_display_with_eta.hpp  stereo_rectification_homographies.proto
src/image_processing/: IrlsLinesDetector.cpp
src/objects_detection/: AbstractModelWindowToObjectWindowConverter.hpp  AbstractObjectsDetector.cpp  AbstractObjectsDetector.hpp  BaseFastestPedestrianDetectorInTheWest.cpp  BaseFastestPedestrianDetectorInTheWest.hpp  BaseIntegralChannelsDetector.cpp  BaseIntegralChannelsDetector.hpp  BaseIntegralChannelsModelsBundleDetector.cpp  BaseIntegralChannelsModelsBundleDetector.hpp  BaseMultiscalesIntegralChannelsDetector.cpp  BaseMultiscalesIntegralChannelsDetector.hpp  BaseVeryFastIntegralChannelsDetector.cpp  BaseVeryFastIntegralChannelsDetector.hpp  DetectorSearchRange.cpp  DetectorSearchRange.hpp  FastModelWindowToObjectWindowConverter.cpp  FastModelWindowToObjectWindowConverter.hpp  FastestPedestrianDetectorInTheWest.cpp  FastestPedestrianDetectorInTheWestV2.hpp  GpuFastestPedestrianDetectorInTheWest.cpp  GpuFastestPedestrianDetectorInTheWest.hpp  GpuIntegralChannelsDetector.cpp  GpuIntegralChannelsDetector.hpp  GpuIntegralChannelsModelsBundleDetector.cpp  GpuIntegralChannelsModelsBundleDetector.hpp  GpuMultiscalesIntegralChannelsDetector.cpp  GpuMultiscalesIntegralChannelsDetector.hpp  GpuVeryFastIntegralChannelsDetector.cpp  GpuVeryFastIntegralChannelsDetector.hpp  IntegralChannelsDetector.cpp  IntegralChannelsDetector.hpp  IntegralChannelsDetectorModelsBundle.cpp  IntegralChannelsDetectorModelsBundle.hpp  IntegralChannelsLinearSvmSlidingWindow.cpp  IntegralChannelsLinearSvmSlidingWindow.hpp  LibLinearTraining.cpp  LinearSvmModel.cpp  ModelWindowToObjectWindowConverter.cpp  ModelWindowToObjectWindowConverterFactory.cpp  ModelWindowToObjectWindowConverterFactory.hpp  (+17 more)
src/objects_tracking/: AbstractObjectsTracker.hpp  DummyObjectsTracker.cpp  DummyObjectsTracker.hpp  ObjectsTrackerFactory.hpp  TrackedDetection2d.cpp  TrackedDetection2d.hpp
src/stereo_matching/: AbstractStereoBlockMatcher.cpp  AbstractStereoBlockMatcher.hpp  AbstractStereoMatcher.cpp  ConstantSpaceBeliefPropagation.cpp  ConstantSpaceBeliefPropagation.hpp  OpenCvStereo.cpp  OpenCvStereo.hpp
src/video_input/: AbstractVideoInput.hpp  ImagesFromDirectory.cpp  MetricCamera.cpp  MetricCamera.hpp  VideoFromFiles.cpp  VideoInputFactory.cpp  VideoInputFactory.hpp
tools/data_sequence/: DataSequenceHeader_pb2.py
tools/helpers/: progressbar.py
tools/objects_detection/: change_shrinking_factor.py  create_multiscales_model.py  create_multiscales_training_dataset.py  detections_evaluation.py  detections_pb2.py  detections_to_caltech.py  detector_model_pb2.py  generate_negative_samples.py  generate_negative_samples_from_detector_output.py  get_crop_and_mean.m  plotStairs.m  plot_caltech_evaluation.py  plot_detector_model.py  plot_evalutation_curves_seed59622.m  plot_image_evaluatoin_curves_left.m
tools/stixels_evaluation/: calibration_pb2.py  ground_top_and_bottom_pb2.py  plane3d_pb2.py  stixels_pb2.py
(+104 files in other folders)
